# dLLM-Serve

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  pyproject.toml
dllmserve/: __init__.py  config.py  llm.py  sampling_params.py
dllmserve/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
dllmserve/layers/: attention.py  embed_head.py  linear.py
dllmserve/models/: dream.py  llada.py
dllmserve/sparse/: state.py
dllmserve/utils/: context.py
docs/: api_reference.md  architecture.md  diffusion_models.md  installation.md  quickstart.md  server_deployment.md  sparse_attention.md
examples/: README.md  basic_usage.py  dream_generation.py  llada_generation.py  simple_test.py
server/: app.py  engine_worker.py
tests/: README.md  run_all_tests.py
tests/integration/: test_inference_dream.py  test_inference_llada.py  test_server.py
tests/performance/: test_log_optimize.py  test_memory_management.py
tests/unit/: test_dream_sparse.py  test_edge_cases.py  test_llada_sparse.py  test_model_warmup.py
